# CppExample

./: .gitignore  README.md
ConfigFile/json/: CMakeLists.txt  config.json  example.cc
ConfigFile/json/cmake/: json.cmake
ConfigFile/toml/: CMakeLists.txt  config.toml  example.cc
ConfigFile/toml/cmake/: toml.cmake
DataStructureAlgorithm/: CircleQueue.cpp
MemoryModel/: SpinLock.cpp  TestMutexAndAtomicCost.cpp
MemoryModel/docs/: 原子操作.md
SpeechProcessing/: CMakeLists.txt
SpeechProcessing/silero-vad/example/: CMakeLists.txt  silero-vad-example.cc  wav.h
StringUtil/: StringUtil.cpp  StringUtil.h
ThreadPool/: TestThreadPool  TestThreadPoolv1.cpp  threadpool_v1.h
ThreadPool/docs/: threadpool.md
Utils/: StringUtil.cpp  StringUtil.h  Timer.h
net/: CMakeLists.txt
net/cmake/: asio.cmake
net/example/: CMakeLists.txt  asio_strand.cc  async_bind_args_timer.cc  async_tcp_server.cc  async_timer.cc  async_with_class_member_func.cc  blocking_tcp_echo_client.cc  sync_tcp_client.cc  sync_tcp_server.cc
net/example/NetworkSimulator/: CLAUDE.md  CMakeLists.txt  README.md  config_example.txt  config_manager.cpp  config_manager.h  main.cpp  network_simulator.cpp  network_simulator.h
net/example/chat/: chat-client.cc  chat-message.hpp  test.cc
net/example/daytime/: CMakeLists.txt  sync_udp_daytime_client.cc  sync_udp_daytime_server.cc
net/example/echo/: CMakeLists.txt  async_tcp_echo_client.cc  async_tcp_echo_server.cc  async_udp_echo_server.cc  sync_udp_echo_client.cc  sync_udp_echo_server.cc
net/example/multicast/: CMakeLists.txt
net/example/thread/: multi_thread_io_context.cc
net/example/timer/: sync_timer.cc
onnxruntime-utils/: CMakeLists.txt  README.md
onnxruntime-utils/onnxruntime-utils/: cnpy.cc  cnpy.h  onnxruntime-tensor.cc  onnxruntime-tensor.h
onnxruntime-utils/test/: CMakeLists.txt  onnxruntime-tensor-test.cc
portaudio-example/: CMakeLists.txt  README.md
portaudio-example/example/: CMakeLists.txt  example.cc  microphone.cc  paex_record.cc  paex_saw.cc  play-wav.cc  record-to-file.cc  wav.h
scripts/: README.md  monitor_process.sh
