add_executable(sync_timer sync_timer.cc)
add_executable(async_timer async_timer.cc)
add_executable(async_bind_args_timer async_bind_args_timer.cc)
add_executable(async_with_class_member_func async_with_class_member_func.cc)
add_executable(asio_strand asio_strand.cc)
add_executable(sync_tcp_client sync_tcp_client.cc)
add_executable(sync_tcp_server sync_tcp_server.cc)
add_executable(async_tcp_server async_tcp_server.cc)
add_executable(blocking_tcp_echo_client blocking_tcp_echo_client.cc)
add_executable(async_tcp_echo_client async_tcp_echo_client.cc)
add_executable(async_tcp_echo_server async_tcp_echo_server.cc)